# catkin_ws

./: Joystick functions.md  Readme.md  merge branch dev into dev
formula/: Hyperbola.cpp  Longitudinal.cpp
src/: Readme.md
src/dxl_control/: CMakeLists.txt  package.xml
src/joy_handler_hori/: CMakeLists.txt  package.xml
src/snake_control/: CMakeLists.txt  package.xml
src/snake_control/src/: helical_wave_propagate_motion.cpp  main.cpp  s_shaped_longitudnal_wave.cpp  s_shaped_longitudnal_wave.h  shift_control_method.cpp  shift_control_method.h  snake_control.cpp  snake_control.h  snake_control_request.cpp  warp_gait.cpp  warp_gait.h  winding_gait.cpp  winding_gait.h
src/snake_msgs/: CMakeLists.txt
src/snake_msgs/msg/: SnakeJointCommand.msg  SnakeJointData2.msg  gps.msg
src/vrep_control/: CMakeLists.txt  package.xml
src/vrep_control/src/: configuration.h  control_robot_for_vrep.cpp  main.cpp  sim_snake_class.cpp  sim_snake_class.h
